<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="wrap_content" android:padding="16dp" android:id="@+id/view_item"
>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/view_item_content">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title"
                  android:id="@+id/view_title" android:textColor="@color/colorBlack" android:textSize="16sp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/location"
                  android:id="@+id/view_location" android:layout_marginTop="6dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="44dp"
                  android:orientation="horizontal" android:layout_gravity="end"
                  android:layout_alignParentEnd="@+id/view_item_content"
                  android:id="@+id/view_buttons"
                  android:padding="6dp"
                  android:layout_alignEnd="@+id/view_item_content">
        <CheckBox android:layout_width="30dp" android:layout_height="30dp"
                  android:id="@+id/checkbox_public"
                  android:layout_marginRight="4dp"/>
        <ImageView android:layout_width="30dp" android:layout_height="30dp"
                   android:id="@+id/image_view_remove" android:contentDescription="@string/todo"
                   app:srcCompat="@drawable/baseline_delete_black_18dp"/>
    </LinearLayout>
</RelativeLayout>